--- a/september/week2/day2/day2.html
+++ b/september/week2/day2/day2.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="quotes.css" />
   </head>
   <body>
-    <div class="wrapper">
+    <!-- -------task 1------ -->
+    <!-- <div class="wrapper">
       <div class="container">
         <p id="quote">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas,
@@ -21,8 +22,15 @@
         <h3 id="author">Lorem, ipsum.</h3>
         <button id="btn">Get Quote</button>
       </div>
+    </div> -->
+    <!-- ------------task 2------------- -->
+    <div>
+      <input id="name" type="text" placeholder="Enter your name here">
+      <input id="password" type="text" placeholder="Enter the valid password">
+      <button onclick="getInfo()">Click</button>
+
     </div>
     <!-- Script -->
-    <script src="quotes.js"></script>
+    <script src="session.js"></script>
   </body>
 </html>
