--- a/september/week2/day2/day2.html
+++ b/september/week2/day2/day2.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- -------task 1------ -->
-    <!-- <div class="wrapper">
+     <div class="wrapper">
       <div class="container">
         <p id="quote">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas,
@@ -22,15 +22,15 @@
         <h3 id="author">Lorem, ipsum.</h3>
         <button id="btn">Get Quote</button>
       </div>
-    </div> -->
+    </div> 
     <!-- ------------task 2------------- -->
-    <div>
+    <!-- <div>
       <input id="name" type="text" placeholder="Enter your name here">
       <input id="password" type="text" placeholder="Enter the valid password">
       <button onclick="getInfo()">Click</button>
 
-    </div>
+    </div> -->
     <!-- Script -->
-    <script src="session.js"></script>
+    <script src="quotes.js"></script>
   </body>
 </html>
